// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    className="sc-hQikvm eJmwLN"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={false}
        className="sc-McAUB bUcIWF"
      />
    </span>
    <p
      className="sc-khrHlC gHVvmC"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    checked={true}
    className="sc-hQikvm eJmwLN"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={true}
        className="sc-McAUB gEVtAg"
      />
    </span>
    <p
      className="sc-khrHlC gHVvmC"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    className="sc-hQikvm eJmwLN"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={false}
        className="sc-McAUB bUcIWF"
      />
    </span>
    <p
      className="sc-khrHlC gHVvmC"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    className="sc-hQikvm eJmwLN"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={false}
        className="sc-McAUB bUcIWF"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Reverse direction 1`] = `
<label
  className="sc-eZkcaX iVvJBb"
>
  <input
    className="sc-hQikvm eJmwLN"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-hZiMVj fzhDfN"
  >
    <p
      className="sc-khrHlC gHVvmC"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
    <span
      className="sc-dDaJoQ kZibGa"
    >
      <div
        checked={false}
        className="sc-McAUB bUcIWF"
      />
    </span>
  </div>
</label>
`;
